tests/ui/pub/pub-ident-struct-3.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-struct-3.rs:1:1
   |
LL | pub S();
   | ^^^^^
   |
help: add `struct` here to parse `S` as a struct
   |
LL | pub struct S();
   |     ++++++

error: aborting due to 1 previous error

